--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html {
     scroll-padding-top:10vh ;
   }
   body{
+    background-color: #010101;
     overflow-x: hidden;
   }
 .home-container{
@@ -19,6 +20,7 @@ html {
     width: 100%;
     height: 100vh;
     background-color: black;
+    margin-top: 10vh;
 
 }
 .home-container::before{
